PointerProperty doesn't activate correctly with 'activate_init' #83539

Closed
opened 2020-12-08 06:25:56 +01:00 by Christopher Gearhart · 4 comments

System Information
Operating system: Mac OS
Graphics card:

Blender Version
Broken: 2.91, 2.83

Short description of error

A pointer property is not displayed correctly when activated from an operator's props popup with 'activate_init'.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Open the default blend file
  2. Paste this simple operator script:
import bpy


class SimpleOperator(bpy.types.Operator):
    """Tooltip"""
    bl_idname = "object.simple_operator"
    bl_label = "Simple Object Operator"

    def execute(self, context):
        return {'FINISHED'}
    
    def draw(self, context):
        scn = context.scene
        self.layout.activate_init = True
        self.layout.prop(scn, "my_material")
        
    def invoke(self, context, event):
        return context.window_manager.invoke_props_dialog(self)


def register():
    bpy.utils.register_class(SimpleOperator)
    bpy.types.Scene.my_material = bpy.props.PointerProperty(
        name="Material",
        type=bpy.types.Material,
    )


def unregister():
    bpy.utils.unregister_class(SimpleOperator)
    del bpy.types.Scene.my_material

if __name__ == "__main__":
    register()
  1. Run the 'Simple Object Operator' script from the operator search
  2. Observe that the popup stays where the cursor was, but the dropdown info snaps to the bottom left corner of the screen:
    Screen Shot 2020-12-08 at 12.24.54 AM.png
**System Information** Operating system: Mac OS Graphics card: <irrelevant> **Blender Version** Broken: 2.91, 2.83 **Short description of error** A pointer property is not displayed correctly when activated from an operator's props popup with 'activate_init'. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Open the default blend file 2. Paste this simple operator script: ``` import bpy class SimpleOperator(bpy.types.Operator): """Tooltip""" bl_idname = "object.simple_operator" bl_label = "Simple Object Operator" def execute(self, context): return {'FINISHED'} def draw(self, context): scn = context.scene self.layout.activate_init = True self.layout.prop(scn, "my_material") def invoke(self, context, event): return context.window_manager.invoke_props_dialog(self) def register(): bpy.utils.register_class(SimpleOperator) bpy.types.Scene.my_material = bpy.props.PointerProperty( name="Material", type=bpy.types.Material, ) def unregister(): bpy.utils.unregister_class(SimpleOperator) del bpy.types.Scene.my_material if __name__ == "__main__": register() ``` 3. Run the 'Simple Object Operator' script from the operator search 4. Observe that the popup stays where the cursor was, but the dropdown info snaps to the bottom left corner of the screen: ![Screen Shot 2020-12-08 at 12.24.54 AM.png](https://archive.blender.org/developer/F9493425/Screen_Shot_2020-12-08_at_12.24.54_AM.png)

Added subscriber: @bblanimation

Added subscriber: @bblanimation
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 10e093b30d

This issue was referenced by 10e093b30d17149008a10df3f52d39744577f17b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-01-28 06:20:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83539
No description provided.